--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,6 @@
-name: GitHub Actions Demo
+
+
+name: App service Deployment
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [pull_request]
 jobs:
@@ -16,3 +18,10 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  Terraform-Plan:
+    runs-on: ubuntu-latest
+    environment: 
+      name: Dev
+    steps:
+      - run : echo "${{vars.Dev}}"
+
