read from environment

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,5 +23,5 @@ jobs:
     environment: 
       name: Dev
     steps:
-      - run : echo "${{vars.Dev}}"
+      - run : echo "${{inputs.environment}}"
 
