--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,6 +9,7 @@ env:
   ARM_CLIENT_SECRET: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_SECRET }}"
   ARM_SUBSCRIPTION_ID: "5a0cae34-bd45-444b-8adf-1ad385a97522"
   ARM_TENANT_ID: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_TENANT_ID }}"
+  ARM_USE_AZUREAD: true
 
 
 jobs:
@@ -29,5 +30,5 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init backend-config="use_azuread_auth=true" backend-config="key=${{ vars.ENVIRONMENT_NAME}}.tdstate" -backend-config="resource_group_name=${{secrets.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" -backend-config="storage_account_name=${{secrets.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" -backend-config="container_name=${{secrets.BACKEND_AZURE_STORAGE_ACCOUNT_CONTAINER_NAME}}"
+        run: terraform init -backend-config="key=${{ vars.ENVIRONMENT_NAME}}.tdstate" -backend-config="resource_group_name=${{secrets.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" -backend-config="storage_account_name=${{secrets.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" -backend-config="container_name=${{secrets.BACKEND_AZURE_STORAGE_ACCOUNT_CONTAINER_NAME}}"
 
