--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,4 +53,23 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars"
+      
+      - name: Run Checkov
+        id: checkov
+        uses: bridgecrewio/checkov-action@v12
+        with:
+          directory: ./terraform
+          framework: terraform
+          output_format: github_failed_only
+          output_file_path: ./terraform
+          quiet: true
+          soft_fail: true
+
+      - name: Checkov Report
+        id: checkov-report
+        working-directory: ./terraform
+        run: |
+          while IFS= read -r line; do
+            echo "$line" >> $GITHUB_STEP_SUMMARY
+          done < results_github_failed_only.md
 
