--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,7 +58,7 @@ jobs:
         id: checkov
         uses: bridgecrewio/checkov-action@v12
         with:
-          directory: infra/
+          directory: /
           framework: terraform
           output_format: github_failed_only
           output_file_path: terraform.xml
