--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,7 +1,7 @@
 
 
-name: App service Deployment
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: Plan Deployment
+run-name: ${{ github.actor }} is performing terraform plan 🚀
 on: [pull_request]
 
 env:
