--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -24,6 +24,9 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2      
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
   
       - name: Terraform Init
         working-directory: ./terraform
