--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,7 +2,9 @@
 
 name: Plan Deployment
 run-name: ${{ github.actor }} is performing terraform plan 🚀
-on: [pull_request]
+#on: [pull_request]
+on:
+  workflow_dispatch:
 
 env:
   ARM_CLIENT_ID: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_ID }}"
