--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -76,6 +76,9 @@ jobs:
       name: Dev
     steps:
       - run : echo "${{ vars.ENVIRONMENT_NAME}}"
+      
+      - name: Checkout code
+        uses: actions/checkout@v2
 
       - uses: azure/login@v2
         with:
