--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -97,14 +97,14 @@ jobs:
         run: |
           dotnet restore
           dotnet build --configuration Release
-          dotnet publish -c Release --property:PublishDir='publish1' 
+          dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
 
        # Deploy to Azure Web apps
       - name: 'Run Azure webapp deploy action using publish profile credentials'      
         uses: azure/webapps-deploy@v3
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-          package: './application/AjgPlatformTest/publish1'
+          package: '.${{ runner.temp }}/myapp'
       
       - name: logout
         run: |
