--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -105,7 +105,7 @@ jobs:
         uses: azure/webapps-deploy@v3
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-          package: '.${{ runner.temp }}/myapp'
+          package: '.${{ runner.temp }}/myapp/AjgPlatformTest'
       
       - name: logout
         run: |
