--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -97,7 +97,7 @@ jobs:
         run: |
           dotnet restore
           dotnet build --configuration Release
-          dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
+          dotnet publish --self-contained -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
 
        # Deploy to Azure Web apps
       - name: 'Run Azure webapp deploy action using publish profile credentials'      
