--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -37,4 +37,43 @@ jobs:
         working-directory: ./terraform
         id: apply
         run: terraform apply --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve    
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          
+      # Setup .NET Core SDK
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ' 8.0.x' #${{ env.DOTNET_VERSION }} 
+      
+      # Run dotnet build and publish
+      - name: dotnet build and publish
+        working-directory: ./application  
+        run: |
+          dotnet restore
+          dotnet build --configuration Release
+          dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
+
+       # Deploy to Azure Web apps
+      - name: 'Run Azure webapp deploy action using publish profile credentials'      
+        uses: azure/webapps-deploy@v3
+        with: 
+          app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
+          package: '${{ runner.temp }}/myapp'
+         
+      
+      - name: set startup command
+        uses: azure/appservice-settings@v1
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }} 
+          general-settings-json: '{"startup-file": "./AjgPlatformTest"}' 
+
+      - name: logout
+        run: |
+          az logout
+
+
+   
+
     
