--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,22 +1,22 @@
 
 
-name: Plan Deployment
-run-name: ${{ github.actor }} is performing terraform plan 🚀
-on: [pull_request]
-
-
-env:
-  ARM_CLIENT_ID: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_ID }}"
-  ARM_CLIENT_SECRET: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_SECRET }}"
-  ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
-  ARM_TENANT_ID: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_TENANT_ID }}"
-  ARM_USE_AZUREAD: true
-  AZURE_WEBAPP_NAME:  "${{ vars.AZURE_WEBAPP_NAME }}"
-
-
-
-jobs:
-
+#name: Plan Deployment
+#run-name: ${{ github.actor }} is performing terraform plan 🚀
+#on: [pull_request]
+#
+#
+#env:
+#  ARM_CLIENT_ID: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_ID }}"
+#  ARM_CLIENT_SECRET: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_SECRET }}"
+#  ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
+#  ARM_TENANT_ID: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_TENANT_ID }}"
+#  ARM_USE_AZUREAD: true
+#  AZURE_WEBAPP_NAME:  "${{ vars.AZURE_WEBAPP_NAME }}"
+#
+#
+#
+#jobs:
+#
 #  Terraform-Plan:
 #    runs-on: ubuntu-latest
 #    environment: 
@@ -72,50 +72,51 @@ jobs:
 #          quiet: true
 #          soft_fail: true
 
-  Deploy-App:
-    runs-on: ubuntu-latest
-    environment: 
-      name: Dev
-    steps:
-      - run : echo "${{ vars.ENVIRONMENT_NAME}}"
-
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      # Setup .NET Core SDK
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ' 8.0.x' #${{ env.DOTNET_VERSION }} 
-      
-      # Run dotnet build and publish
-      - name: dotnet build and publish
-        working-directory: ./application  
-        run: |
-          dotnet restore
-          dotnet build --configuration Release
-          dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
-
-       # Deploy to Azure Web apps
-      - name: 'Run Azure webapp deploy action using publish profile credentials'      
-        uses: azure/webapps-deploy@v3
-        with: 
-          app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-          package: '${{ runner.temp }}/myapp'
-         
-      
-      - name: set startup command
-        uses: azure/appservice-settings@v1
-        with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }} 
-          general-settings-json: '{"startup-file": "./AjgPlatformTest"}' 
-
-      - name: logout
-        run: |
-          az logout
-
-
-   
+# Deploy-App:
+#   runs-on: ubuntu-latest
+#   environment: 
+#     name: Dev
+#   steps:
+#     - run : echo "${{ vars.ENVIRONMENT_NAME}}"
+#
+#     - name: Checkout code
+#       uses: actions/checkout@v2
+#
+#     - uses: azure/login@v2
+#       with:
+#         creds: ${{ secrets.AZURE_CREDENTIALS }}
+#     # Setup .NET Core SDK
+#     - name: Setup .NET Core
+#       uses: actions/setup-dotnet@v3
+#       with:
+#         dotnet-version: ' 8.0.x' #${{ env.DOTNET_VERSION }} 
+#     
+#     # Run dotnet build and publish
+#     - name: dotnet build and publish
+#       working-directory: ./application  
+#       run: |
+#         dotnet restore
+#         dotnet build --configuration Release
+#         dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
+#
+#      # Deploy to Azure Web apps
+#     - name: 'Run Azure webapp deploy action using publish profile credentials'      
+#       uses: azure/webapps-deploy@v3
+#       with: 
+#         app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
+#         package: '${{ runner.temp }}/myapp'
+#        
+#     
+#     - name: set startup command
+#       uses: azure/appservice-settings@v1
+#       with:
+#         app-name: ${{ env.AZURE_WEBAPP_NAME }} 
+#         general-settings-json: '{"startup-file": "./AjgPlatformTest"}' 
+#
+#     - name: logout
+#       run: |
+#         az logout
+#
+#
+#  
+#
