add startup command

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -62,14 +62,8 @@ jobs:
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
           package: '${{ runner.temp }}/myapp'
-         
-      
-      - name: set startup command
-        uses: azure/appservice-settings@v1
-        with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }} 
-          general-settings-json: '{"startup-file": "./AjgPlatformTest"}' 
-
+          startup-command: "./AjgPlatformTest"
+          
       - name: logout
         run: |
           az logout
