--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,14 @@ jobs:
       - name: Terraform Apply
         working-directory: ./terraform
         id: apply
-        run: terraform apply --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve    
+        run: terraform apply --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve
+
+      - name: Terraform Output
+        working-directory: ./terraform
+        id: output
+        run: terraform output --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" 
+
+        
       - uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -46,7 +53,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: ' 8.0.x' #${{ env.DOTNET_VERSION }} 
+          dotnet-version: ' 8.0.x'  
       
       # Run dotnet build and publish
       - name: dotnet build and publish
