--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,40 +42,42 @@ jobs:
       - name: Terraform Output
         working-directory: ./terraform
         id: output
-        run:  terraform output |  jq .[].app_service_url.value
-
+        run:  |
+          web_service_url=(terraform output |  jq .[].app_service_url.value) >> $GITHUB_ENV
+          echo ${{ env.AZURE_WEBAPP_NAME }}
         
-      - uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      # Setup .NET Core SDK
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: ' 8.0.x'  
-      
-      # Run dotnet build and publish
-      - name: dotnet build and publish
-        working-directory: ./application  
-        run: |
-          dotnet restore
-          dotnet build --configuration Release
-          dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
-
-       # Deploy to Azure Web apps
-      - name: 'Run Azure webapp deploy action using publish profile credentials'      
-        uses: azure/webapps-deploy@v3
-        with: 
-          app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-          package: '${{ runner.temp }}/myapp'
-          startup-command: "./AjgPlatformTest"
-
-      - name: logout
-        run: |
-          az logout
-
-
-   
-
-    
+#  - uses: azure/login@v2
+#    with:
+#      creds: ${{ secrets.AZURE_CREDENTIALS }}
+#
+#  # Setup .NET Core SDK
+#  - name: Setup .NET Core
+#    uses: actions/setup-dotnet@v3
+#    with:
+#      dotnet-version: ' 8.0.x'  
+#  
+#  # Run dotnet build and publish
+#  - name: dotnet build and publish
+#    working-directory: ./application  
+#    run: |
+#      dotnet restore
+#      dotnet build --configuration Release
+#      dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
+#
+#   # Deploy to Azure Web apps
+#  - name: 'Run Azure webapp deploy action using publish profile credentials'      
+#    uses: azure/webapps-deploy@v3
+#    with: 
+#      app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
+#      package: '${{ runner.temp }}/myapp'
+#      startup-command: "./AjgPlatformTest"
+#
+#  - name: logout
+#    run: |
+#      az logout
+#
+#
+#
+#
+#
+#
