--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ env:
   ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_TENANT_ID }}"
   ARM_USE_AZUREAD: true
-  AZURE_WEBAPP_NAME:  ""
+
   
 
 
@@ -43,43 +43,41 @@ jobs:
       - name: Terraform Output
         shell: bash
         working-directory: ./terraform
-        id: output
+        id: tfoutput
         run:  |
-          echo "AZURE_WEBAPP_NAME=$(terraform output -raw app_service_name)" >> $GITHUB_ENV
-          
+          echo "AZURE_WEBAPP_NAME=$(terraform output -raw app_service_name)" >> $GITHUB_OUTPUT          
         
-#  - uses: azure/login@v2
-#    with:
-#      creds: ${{ secrets.AZURE_CREDENTIALS }}
-#
-#  # Setup .NET Core SDK
-#  - name: Setup .NET Core
-#    uses: actions/setup-dotnet@v3
-#    with:
-#      dotnet-version: ' 8.0.x'  
-#  
-#  # Run dotnet build and publish
-#  - name: dotnet build and publish
-#    working-directory: ./application  
-#    run: |
-#      dotnet restore
-#      dotnet build --configuration Release
-#      dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
-#
-#   # Deploy to Azure Web apps
-#  - name: 'Run Azure webapp deploy action using publish profile credentials'      
-#    uses: azure/webapps-deploy@v3
-#    with: 
-#      app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
-#      package: '${{ runner.temp }}/myapp'
-#      startup-command: "./AjgPlatformTest"
-#
-#  - name: logout
-#    run: |
-#      az logout
-#
-#
-#
-#
-#
-#
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # Setup .NET Core SDK
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ' 8.0.x'  
+      
+      # Run dotnet build and publish
+      - name: dotnet build and publish
+        working-directory: ./application  
+        run: |
+          dotnet restore
+          dotnet build --configuration Release
+          dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
+
+      # Deploy to Azure Web apps
+      - name: 'Run Azure webapp deploy action using publish profile credentials'      
+        uses: azure/webapps-deploy@v3
+        with: 
+          app-name: ${{ steps.tfoutput.AZURE_WEBAPP_NAME }} # Replace with your app name
+          package: '${{ runner.temp }}/myapp'
+          startup-command: "./AjgPlatformTest"
+
+      - name: logout
+        run: |
+          az logout
+
+
+
+
+
