read webapp url from tf output

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ env:
 
 jobs:
 
-  Terraform-Plan:
+  Deploy-Terraform-And-App:
     runs-on: ubuntu-latest
     environment: 
       name: Dev
@@ -45,7 +45,7 @@ jobs:
         working-directory: ./terraform
         id: tfoutput
         run:  |
-          echo "AZURE_WEBAPP_NAME=$(terraform output -raw app_service_name)" >> $GITHUB_OUTPUT          
+          echo "AZURE_WEBAPP_NAME=$(terraform output -raw app_service_name)" >> "$GITHUB_OUTPUT"          
         
       - uses: azure/login@v2
         with:
