--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,13 +11,12 @@ env:
   ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_TENANT_ID }}"
   ARM_USE_AZUREAD: true
-
-  
+  AZURE_WEBAPP_NAME:  "${{ vars.AZURE_WEBAPP_NAME }}"
 
 
 jobs:
 
-  Deploy-Terraform-And-App:
+  Terraform-Plan:
     runs-on: ubuntu-latest
     environment: 
       name: Dev
@@ -38,15 +37,7 @@ jobs:
       - name: Terraform Apply
         working-directory: ./terraform
         id: apply
-        run: terraform apply --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve
-
-      - name: Terraform Output
-        shell: bash
-        working-directory: ./terraform
-        id: tfoutput
-        run:  |
-          echo 'AZURE_WEBAPP_NAME=$(terraform output -raw app_service_name)'' >> "$GITHUB_OUTPUT"          
-         
+        run: terraform apply --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve    
       - uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
@@ -55,7 +46,7 @@ jobs:
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: ' 8.0.x'  
+          dotnet-version: ' 8.0.x' #${{ env.DOTNET_VERSION }} 
       
       # Run dotnet build and publish
       - name: dotnet build and publish
@@ -65,11 +56,11 @@ jobs:
           dotnet build --configuration Release
           dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
 
-      # Deploy to Azure Web apps
+       # Deploy to Azure Web apps
       - name: 'Run Azure webapp deploy action using publish profile credentials'      
         uses: azure/webapps-deploy@v3
         with: 
-          app-name: ${{ steps.tfoutput.AZURE_WEBAPP_NAME }} # Replace with your app name
+          app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
           package: '${{ runner.temp }}/myapp'
           startup-command: "./AjgPlatformTest"
 
@@ -78,6 +69,6 @@ jobs:
           az logout
 
 
+   
 
-
-
+    
