reduce auth in destroy

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -5,14 +5,9 @@ run-name: ${{ github.actor }} is destroying Calculate Microservice Infrastructur
 on:
   workflow_dispatch:
 
-env:
-  ARM_CLIENT_ID: "${{ vars.DEVOPS_PRINCIPAL_CLIENT_ID }}"
-  ARM_CLIENT_SECRET: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_SECRET }}"
+env:  
   ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
-  ARM_TENANT_ID: "${{ vars.DEVOPS_PRINCIPAL_CLIENT_TENANT_ID }}"
   ARM_USE_AZUREAD: true
-  AZURE_WEBAPP_NAME:  "${{ vars.AZURE_WEBAPP_NAME }}"
-
 
 jobs:
 
@@ -21,7 +16,9 @@ jobs:
     environment: 
       name: Dev
     steps:
-      - run : echo "${{ vars.ENVIRONMENT_NAME}}"
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Checkout code
         uses: actions/checkout@v2      
@@ -32,7 +29,7 @@ jobs:
       - name: Terraform Init
         working-directory: ./terraform
         id: init
-        run: terraform init -backend-config="key=terraform.tfstate" -backend-config="resource_group_name=${{vars.BACKEND_AZURE_RESOURCE_GROUP_NAME}}" -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" -backend-config="container_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_CONTAINER_NAME}}"
+        run: terraform init -backend-config="key=terraform.tfstate" -backend-config="resource_group_name=${{ vars.BACKEND_AZURE_RESOURCE_GROUP_NAME }}" -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}"
 
       - name: Terraform Apply
         working-directory: ./terraform
