--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,22 +6,21 @@ on:
   workflow_dispatch:
 
 env:
-  ARM_CLIENT_ID: "${{ vars.DEVOPS_PRINCIPAL_CLIENT_ID }}"
-  ARM_CLIENT_SECRET: "${{ secrets.DEVOPS_PRINCIPAL_CLIENT_SECRET }}"
-  ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
-  ARM_TENANT_ID: "${{ vars.DEVOPS_PRINCIPAL_CLIENT_TENANT_ID }}"
   ARM_USE_AZUREAD: true
   AZURE_WEBAPP_NAME:  "${{ vars.AZURE_WEBAPP_NAME }}"
+  ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
 
 
 jobs:
 
-  Terraform-Plan:
+  Deploy-tf-dotnet:
     runs-on: ubuntu-latest
     environment: 
       name: Dev
     steps:
-      - run : echo "${{ vars.ENVIRONMENT_NAME}}"
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Checkout code
         uses: actions/checkout@v2      
@@ -38,10 +37,7 @@ jobs:
         working-directory: ./terraform
         id: apply
         run: terraform apply --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve    
-      - uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
+      
       # Setup .NET Core SDK
       - name: Setup .NET Core
         uses: actions/setup-dotnet@v3
