add powershell test task

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -31,7 +31,7 @@ jobs:
         id: init
         run: terraform init -backend-config="key=terraform.tfstate" -backend-config="resource_group_name=${{ vars.BACKEND_AZURE_RESOURCE_GROUP_NAME }}" -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}"
 
-      - name: Terraform Apply
+      - name: Terraform Destroy
         working-directory: ./terraform
         id: apply
         run: terraform destroy --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve    
