--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,9 +60,12 @@ jobs:
           package: '${{ runner.temp }}/myapp'
           startup-command: "./AjgPlatformTest"
 
-      - name: logout
+      - name: Perform a Pester test from the Tests.ps1 file
+        shell: pwsh
         run: |
-          az logout
+          .\validate.tests.ps1 -TerraformConfigurationPath "terraform"
+
+
 
 
    
