--- a/.github/workflows/deploy-ajg.yml
+++ b/.github/workflows/deploy-ajg.yml
@@ -11,7 +11,7 @@ jobs:
   Deploy-tf-dotnet:    
     runs-on: ubuntu-latest
     environment: 
-      name: Ajg
+      name: Dev
     env:
       ARM_USE_AZUREAD: true
       AZURE_WEBAPP_NAME:  ""
