add parameter to test script

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,7 +71,7 @@ jobs:
         shell: pwsh
         run: |
           ls
-          .\validate.tests.ps1
+          .\validate.tests.ps1 -TerraformConfigurationPath "terraform"
 
       - name: logout
         run: |
