Feature/add validate test to pipeline (#23)
* Add tests to deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,7 @@ run-name: ${{ github.actor }} is deploying Calculate Microservice🚀
 on:
   workflow_dispatch:
 
-env:
-  ARM_USE_AZUREAD: true
-  AZURE_WEBAPP_NAME:  ""
-  ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
+
 
 
 jobs:
@@ -17,6 +14,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: 
       name: Dev
+    env:
+      ARM_USE_AZUREAD: true
+      AZURE_WEBAPP_NAME:  ""
+      ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"          
+
     steps:
       - uses: azure/login@v2
         with:
@@ -55,15 +57,20 @@ jobs:
         run: |
           dotnet restore
           dotnet build --configuration Release
-          dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  
-
+          dotnet publish -c Release --property:PublishDir='${{ runner.temp }}/myapp'  #
        # Deploy to Azure Web apps
       - name: 'Run Azure webapp deploy action using publish profile credentials'      
         uses: azure/webapps-deploy@v3
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
           package: '${{ runner.temp }}/myapp'
-          startup-command: "./AjgPlatformTest"
+          startup-command: "./AjgPlatformTest"#
+
+      - name: Validate Deployment
+        shell: pwsh
+        run: |
+          ls
+          .\validate.tests.ps1 -TerraformConfigurationPath "terraform"
 
       - name: logout
         run: |
