remove trailing hash

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
           package: '${{ runner.temp }}/myapp'
-          startup-command: "./AjgPlatformTest"#
+          startup-command: "./AjgPlatformTest"
 
       - name: Validate Deployment
         shell: pwsh
