Feature/add validate test to pipeline (#24)
* remove trailing hash

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,6 +72,12 @@ jobs:
           ls
           .\validate.tests.ps1 -TerraformConfigurationPath "terraform"
 
+      - name: Validate Deployment
+        shell: pwsh
+        run: |
+          ls
+          .\validate.tests.ps1 -TerraformConfigurationPath "terraform"
+
       - name: logout
         run: |
           az logout
