--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
   Deploy-tf-dotnet:
     runs-on: ubuntu-latest
     environment: 
-      name: Dev
+      name: Ajg
     env:
       ARM_USE_AZUREAD: true
       AZURE_WEBAPP_NAME:  ""
@@ -64,19 +64,7 @@ jobs:
         with: 
           app-name: ${{ env.AZURE_WEBAPP_NAME }} # Replace with your app name
           package: '${{ runner.temp }}/myapp'
-          startup-command: "./AjgPlatformTest"#
-
-      - name: Validate Deployment
-        shell: pwsh
-        run: |
-          ls
-          .\validate.tests.ps1 -TerraformConfigurationPath "terraform"
-
-      - name: Validate Deployment
-        shell: pwsh
-        run: |
-          ls
-          .\validate.tests.ps1 -TerraformConfigurationPath "terraform"
+          startup-command: "./AjgPlatformTest"           
 
       - name: logout
         run: |
