--- a/.github/workflows/validate-deployment.yml
+++ b/.github/workflows/validate-deployment.yml
@@ -1,21 +1,23 @@
 
 
-name: Ajg Provision and Deploy Web App
-run-name: ${{ github.actor }} is deploying Calculate Microservice🚀
+name: Validate Deployment
+run-name: ${{ github.actor }} is validating Calculate Microservice Deployment🚀
 on:
   workflow_dispatch:
 
 
 
+
 jobs:
-  Deploy-tf-dotnet:    
+
+  Deploy-tf-dotnet:
     runs-on: ubuntu-latest
     environment: 
-      name: Dev
+      name: Ajg
     env:
       ARM_USE_AZUREAD: true
       AZURE_WEBAPP_NAME:  ""
-      ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"
+      ARM_SUBSCRIPTION_ID:  "${{ vars.SUBSCRIPTION_ID }}"          
 
     steps:
       - uses: azure/login@v2
@@ -35,11 +37,19 @@ jobs:
         id: init
         run: terraform init -backend-config="key=terraform.tfstate" -backend-config="resource_group_name=${{ vars.BACKEND_AZURE_RESOURCE_GROUP_NAME }}" -backend-config="storage_account_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_NAME}}" -backend-config="container_name=${{vars.BACKEND_AZURE_STORAGE_ACCOUNT_CONTAINER_NAME}}"
 
-      - name: Terraform Plan
+      - name: Terraform Apply
         working-directory: ./terraform
-        id: plan
+        id: apply
         run: |
-         terraform plan --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve    
+         terraform apply --var-file="env/${{vars.ENVIRONMENT_NAME}}.tfvars" --auto-approve    
+         echo "AZURE_WEBAPP_NAME=$(terraform output -raw app_service_name)" >> $GITHUB_ENV
+         echo ${{ env.AZURE_WEBAPP_NAME }}
+
+      - name: Validate Deployment
+        shell: pwsh
+        run: |
+          ls
+          .\validate.tests.ps1 -TerraformConfigurationPath "terraform"      
 
       - name: logout
         run: |
